--- a/applications/app/templates/login.html
+++ b/applications/app/templates/login.html
@@ -32,7 +32,7 @@
 					  <div class="modal-body">
 						<div class="col-md-12" style="padding-bottom:10px;">
 							<label class="form-label">Username</label>
-							<input type="email" class="form-control" v-model="name">
+							<input type="text" class="form-control" v-model="name">
 						</div>
 						<div class="col-md-12" style="padding-bottom:10px;">
 							<label class="form-label">Password</label>
